# candypay-creditcard-ocr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
